--- a/src/components/Hero/MovingEntities/MovingEntities.module.css
+++ b/src/components/Hero/MovingEntities/MovingEntities.module.css
@@ -2,6 +2,6 @@
   position: absolute;
   top: 0px;
   width: 100vw;
-  height: 100%;
+  height: 100vh;
   z-index: -1;
 }
